--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="semilar-title">What I do</h3>
+            <p class="whatdodesc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="techanology-type">
+                <div class="tec-items">
+                    <img src="./image/icons/js.png" alt="">
+                    <h3 class="tec-title">Vanilla JavaScript</h3>
+                    <p class="tec-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="tec-items">
+                    <img src="./image/icons/react.png" alt="">
+                    <h3 class="tec-title">React</h3>
+                    <p class="tec-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="tec-items">
+                    <img src="./image/icons/nodejs.png" alt="">
+                    <h3 class="tec-title">Node.js</h3>
+                    <p class="tec-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="tec-items">
+                    <img src="./image/icons/mongo.png" alt="">
+                    <h3 class="tec-title">MongoDB</h3>
+                    <p class="tec-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
