--- a/index.html
+++ b/index.html
@@ -82,9 +82,90 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="semilar-title ex-mar">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-colume">
+                    <h2 class="resume-h-title">My Education</h2>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">Master in Computer Engineering</h2>
+                        <h3 class="resumi-instatue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">Master in Computer Engineering</h2>
+                        <h3 class="resumi-instatue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">Master in Computer Engineering</h2>
+                        <h3 class="resumi-instatue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-colume">
+                    <h2 class="resume-h-title">My Experience</h2>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">Sr. Font End Developer</h2>
+                        <h3 class="resumi-instatue">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">Jr. Font End Developer</h2>
+                        <h3 class="resumi-instatue">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h2 class="resumi-title">HTML Developer</h2>
+                        <h3 class="resumi-instatue">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="download-button">
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="contact-from-description">
+            <div class="footer-column">
+                <h3 class="from-title">Lets Connect</h3>
+                <p class="from-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href=""><img src="./image/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./image/icons/twitter.png" alt=""></a>
+                <a href=""><img src="./image/icons/insta.png" alt=""></a>
+            </div>
+            <div class="footer-column">
+                <h3 class="from-title">Let’s Message me</h3>
+                <form action="">
+                    <div class="form">
+                        <label for="">
+                            <input type="text" placeholder="Write Your Name">
+                        </label>
+                        <label for="">
+                            <input type="email" placeholder="Write Your Email">
+                        </label>
+                        <label for="">
+                            <textarea name="" id="" cols="10" rows="5" placeholder="Write Your Message"></textarea>
+                        </label>
+                        <label for="">
+                            <input class="btn-primary" type="submit" value="Send">
+                        </label>
+                    </div>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
