--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <button class="btn-primary">Hire Me</button>
+                <button class="btn-primary" onclick="callingFunction('ruhitbaidya01@gmail.com')">Hire Me</button>
             </ul>
         </nav>
         <div class="hearo-section">
@@ -25,8 +25,8 @@
                 <h3 class="hero-text">Hi, I  am</h3>
                 <h1 class="hero-title">Mary Hardy</h1>
                 <p class="hero-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
+                <button class="btn-primary" onclick="callingFunction('Nothing To Find')"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary" onclick="callingFunction('01742772705')"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="image/hardy.png" alt="">
         </div>
@@ -160,12 +160,17 @@
                             <textarea name="" id="" cols="10" rows="5" placeholder="Write Your Message"></textarea>
                         </label>
                         <label for="">
-                            <input class="btn-primary" type="submit" value="Send">
+                            <input onclick="callingFunction('message Send')" class="btn-primary" type="submit" value="Send">
                         </label>
                     </div>
                 </form>
             </div>
         </div>
     </footer>
+    <script>
+        function callingFunction(text){
+            alert(text)
+        }
+    </script>
 </body>
 </html>
